# brainybeam_internship_project

./: README.md  app.py  main.py  pyproject.toml  requirements.txt
data/processed/: titanic_processed.csv
notebooks/: 01_data_loading.ipynb  02_data_cleaning.ipynb  03_eda.ipynb  04_model_testing.ipynb  05_final_notes.ipynb  eda.ipynb
reports/: eda_summary.csv  model_metrics.csv
src/: app_pages.py  chart_work.py  config.py  data_work.py  model_work.py  project.py
src/models/: knn_model.pkl  logistic_regression_model.pkl  model_manifest.pkl  scaler.pkl  svm.pkl
