[project]
name = "internship-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.3.0",
    "seaborn>=0.12.0",
    "streamlit>=1.20.0",
]
